<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="-100dp"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/ic_launcher_foreground"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/beon"
                android:text="Disco"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Space
                android:layout_width="10dp"
                android:layout_height="20dp" />

            <TextView
                style="@style/BigTitleText"
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Protocol"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <disco.foundation.discoprotocol.components.CustomButton
            style="@style/PrimaryButton"
            android:id="@+id/check_in_btn"
            app:color="@color/neon_blue"
            app:buttonText="@string/check_in"
            app:backgroundVector="@drawable/animated_blue_border"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <disco.foundation.discoprotocol.components.CustomButton
            android:id="@+id/recharge_btn"
            style="@style/PrimaryButton"
            app:color="@color/neon_green"
            app:buttonText="@string/recharge"
            app:backgroundVector="@drawable/animated_green_border"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <disco.foundation.discoprotocol.components.CustomButton
            android:id="@+id/purchase_btn"
            style="@style/PrimaryButton"
            app:color="@color/neon_pink"
            app:buttonText="@string/purchase"
            app:backgroundVector="@drawable/animated_pink_border"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <disco.foundation.discoprotocol.components.CustomButton
            android:id="@+id/check_info_btn"
            style="@style/PrimaryButton"
            app:color="@color/neon_purple"
            app:buttonText="@string/view_info"
            app:backgroundVector="@drawable/animated_purple_border"/>

    </LinearLayout>

</FrameLayout>